#111, add party/update/delete mit anna erstellt party ladet thomas ein, thomas hat email von carla, sie bekommt alle benachrichtigungen
