# src/main/java/at/htl/user/UserCreateDto.java
@@ -1,3 +1,3 @@
 package at.htl.user;
 
-public record UserCreateDto(String displayName, String distinctName, String email, String biography) {};
+public record UserCreateDto(String displayName, String distinctName, String email, String phoneNumber, String biography) {};
