# src/main/java/at/htl/user/UserResource.java
@@ -73,6 +73,7 @@ public class UserResource {
         user.setDisplayName(userCreateDto.displayName());
         user.setDistinctName(userCreateDto.distinctName());
         user.setEmail(userCreateDto.email());
+        user.setPhoneNumber(userCreateDto.phoneNumber());
         user.setBiography(userCreateDto.biography());
         return user;
     }
@@ -164,6 +165,7 @@ public class UserResource {
         user.setDisplayName(userCreateDto.displayName());
         user.setDistinctName(userCreateDto.distinctName());
         user.setEmail(userCreateDto.email());
+        user.setPhoneNumber(userCreateDto.phoneNumber());
         user.setBiography(userCreateDto.biography());
         
         User merged = em.merge(user);
